--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.12.0",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "wrangler": "^4.25.0"
   }
 }
